<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <android.support.v7.widget.GridLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <Button
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="speakPhrases"
            android:text="@string/Hello_phrase"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1"
            tools:text="Hello" />

        <Button
            android:id="@+id/doyouspeakenglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="speakPhrases"
            android:text="@string/doyouspeakenglish_phrase"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1"
            tools:text="Do you &#10;speak english" />

        <Button
            android:id="@+id/goodevening"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="speakPhrases"
            android:text="@string/goodevening_phrase"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/howareyou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="speakPhrases"
            android:text="@string/howareyou_phrase"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/ilivein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="speakPhrases"
            android:text="@string/ilivein_phrase"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/mynameis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="speakPhrases"
            android:text="@string/mynameis_phrase"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/please"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="speakPhrases"
            android:text="@string/please_phrase"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="speakPhrases"
            android:text="@string/welcome_phrase"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="1" />


    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>